add beginning of controller methods for projects.

--- a/app/views/site_pages/home.html.erb
+++ b/app/views/site_pages/home.html.erb
@@ -1,1 +1,3 @@
-<h1>This is the home page.</h1>
+<h1>Welcome to Mario's Specialty Knives!</h1>
+
+<h3>For a list of our current knives, please click the link below to browse.</h3>
