fixed naming errors in products controller and some misnamed folders.

--- a/app/views/site_pages/home.html.erb
+++ b/app/views/site_pages/home.html.erb
@@ -1,3 +1,5 @@
 <h1>Welcome to Mario's Specialty Knives!</h1>
 
 <h3>For a list of our current knives, please click the link below to browse.</h3>
+
+<p><%= link_to "Product List", products_path %></p>
