add functionality to all product views.

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -6,4 +6,4 @@
 <p><%= link_to "Edit product", edit_product_path(@product) %></p>
 <p><%= link_to "Delete product", product_path(@product),
                                   :data => {:confirm => "Are you certain that you want to delete this product entry?", :method => "delete"} %></p>
-<p><%= link_to "Return to the browsing the product list", products_path %></p>
+<p><%= link_to "Return to browsing the product list", products_path %></p>
