--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -3,6 +3,20 @@
 <p>Cost: $ <%= @product.cost %> dollars</p>
 <p>This product is from <%= @product.country_of_origin %></p>
 
+<h3>Reviews:</h3>
+<% if @product.reviews.any? %>
+  <h4>User reviews:</h4>
+  <% @product.reviews.each do |review| %>
+    <ul>
+      <li><%= review.author %> says: <%= review.content_body %> and gives this product a rating of <%= review.rating %></li>
+    </ul>
+  <% end %>
+<% else %>
+  <p>There are no reviews for this product.</p>
+<% end %>
+
+<p><%= link_to "Add a review", new_product_review_path(@product) %></p>
+
 <p><%= link_to "Edit product", edit_product_path(@product) %></p>
 <p><%= link_to "Delete product", product_path(@product),
                                   :data => {:confirm => "Are you certain that you want to delete this product entry?", :method => "delete"} %></p>
