add code to controller and views to fix adding new review, edit and delete review.

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -8,7 +8,8 @@
   <h4>User reviews:</h4>
   <% @product.reviews.each do |review| %>
     <ul>
-      <li><%= review.author %> says: <%= review.content_body %> and gives this product a rating of <%= review.rating %></li>
+      <li><%= review.author %> says: <%= review.content_body %> They give this product a rating of <%= review.rating %></li>
+      <li><%= link_to "edit this review", edit_product_review_path(@product, review)%></li>
     </ul>
   <% end %>
 <% else %>
