--- a/app/assets/stylesheets/site_pages.scss
+++ b/app/assets/stylesheets/site_pages.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the site_pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body {
+  background-color: rgb(98, 77, 97);
+  color: rgb(82, 188, 191);
+}
+
+.hyperlinks{
+  color: white;
+}
