--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -12,5 +12,5 @@
 <% end %>
 
 <p><%= link_to "Delete review", product_review_path(@product, @review),
-                                  :data => {:confirm => "Are you certain that you want to delete this review?", :method => "delete"} %></p>
-<p>Return to the product page for: <%= link_to @product.name, product_path(@product)%></p>
+                                  :data => {:confirm => "Are you certain that you want to delete this review?", :method => "delete"}, class:"hyperlinks" %></p>
+<p>Return to the product page for: <%= link_to @product.name, product_path(@product), class:"hyperlinks"%></p>
