--- a/app/views/site_pages/home.html.erb
+++ b/app/views/site_pages/home.html.erb
@@ -2,4 +2,4 @@
 
 <h3>For a list of our current knives, please click the link below to browse.</h3>
 
-<p><%= link_to "Product List", products_path %></p>
+<p><%= link_to "Product List", products_path, class:"hyperlinks"%></p>
