--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -6,7 +6,7 @@
 <%= f.label :content_body %>
 <%= f.text_area :content_body %>
 <%= f.label :rating %>
-<%= f.number_field :rating %>
+<%= f.number_field :rating, min: 1, max: 5 %>
 
 <%= f.submit %>
 <% end %>
