--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,12 +1,3 @@
 <h1>Edit product: <%= @product.name %></h1>
 
-<%= form_for @product do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-  <%= f.label :cost %>
-  <%= f.number_field :cost %>
-  <%= f.label :country_of_origin %>
-  <%= f.text_field :country_of_origin %>
-
-  <%= f.submit  %>
-<% end %>
+<%= render: "layouts/product_form" %>
