--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,12 +1,3 @@
 <h1>Add a new review:</h1>
 
-<%= form_for [@product, @review] do |f| %>
-<%= f.label :author %>
-<%= f.text_field :author %>
-<%= f.label :content_body %>
-<%= f.text_area :content_body %>
-<%= f.label :rating %>
-<%= f.number_field :rating, min: 1, max: 5 %>
-
-<%= f.submit %>
-<% end %>
+<%= render "layouts/review_form" %>
