--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,9 @@
 
   <body>
     <div class="container">
-      <nav>
+      <nav class="nav-header">
         <p><%= link_to "Home", root_path, class:"hyperlinks"%></p>
+        <p><%= link_to "Products", products_path, class:"hyperlinks"%></p>
       </nav>
     </div>
     <div class="container">
