--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @product.name %></h1>
+<h1><span class="product_name"><%= @product.name %></span></h1>
 <h3>Product Details:</h3>
 <p>Cost: $ <%= @product.cost %> dollars</p>
 <p>This product is from <%= @product.country_of_origin %></p>
