--- a/app/views/site_pages/home.html.erb
+++ b/app/views/site_pages/home.html.erb
@@ -1,5 +1,6 @@
+<div class="jumbotron">
 <h1>Welcome to Mario's Specialty Knives!</h1>
-
+</div>
 
 <% if @products.any? %>
   <h3>Here are our three newest products!</h3>
