--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,3 +1,3 @@
-<h1>Edit product: <%= @product.name %></h1>
+<h1><span class="product-name">Edit product: <%= @product.name %></span></h1>
 
 <%= render "layouts/product_form" %>
