--- a/app/assets/stylesheets/site_pages.scss
+++ b/app/assets/stylesheets/site_pages.scss
@@ -13,6 +13,12 @@
 .product_name {
   color: black;
 }
+.product-col {
+  float: left;
+  margin-left: 1em;
+  margin-right: 1em;
+  background-color: blue;
+}
 
 body {
   // background-color: black;
@@ -23,11 +29,13 @@ body {
   color: orange;
 }
 
-.row {
-  display: flex;
-}
-// #product-show {
-//   width: 50%;
-//   height: 300px;
-//   background-color: red;
+// .row h3{
+//   font-size: ;
 // }
+
+.product-show {
+  column-count: 6;
+  column-width: auto;
+  column-gap: 1em;
+  background-color: red;
+}
