--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,14 +6,9 @@
 </div>
 <h1>Products</h1>
 
-<div class="container">
-  <div class="row">
-    <div class="column-md-6">
-
+<div class="container, product-show">
       <% if @products.any? %>
-
       <ul>
-
         <% @products.each do |product| %>
           <li><%= link_to product.name, product_path(product), class:"hyperlinks"%></li>
         <% end %>
@@ -21,10 +16,4 @@
       <% else %>
         <p>There are no products yet.</p>
       <% end %>
-
-    </div>
-    <div class="column-md-6">
-      <p>Second column</p>
-    </div>
-  </div>
 </div>
