--- a/app/views/site_pages/home.html.erb
+++ b/app/views/site_pages/home.html.erb
@@ -1,36 +1,43 @@
 <div class="jumbotron">
 <h1>Welcome to Mario's Specialty Knives!</h1>
 </div>
-
-<% if @products.any? %>
-  <h3>Here are our three newest products!</h3>
-  <% @products.three_most_recent.each do |product| %>
-    <ul>
-      <li><%= link_to product.name, product_path(product), class:"hyperlinks"%></li>
-    </ul>
-  <% end %>
-<% else %>
-  <p>There are no recent products.</p>
-<% end %>
-
-<% if @products.most_reviews.any? %>
-  <h3>Here are our most reviewed products!</h3>
-  <% @products.most_reviews.each do |product| %>
-    <ul>
-      <li><%= link_to product.name, product_path(product), class:"hyperlinks"%></li>
-    </ul>
-  <% end %>
-<% else %>
-  <p>There are no recent products.</p>
-<% end %>
-
-<% if @products.made_in_usa.any? %>
-  <h3>Here are products only made in the USA!</h3>
-  <% @products.made_in_usa.each do |product| %>
-    <ul>
-      <li><%= link_to product.name, product_path(product), class:"hyperlinks"%></li>
-    </ul>
-  <% end %>
-<% else %>
-  <p>There are no USA products.</p>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="column-md-2, product-col">
+      <% if @products.any? %>
+        <h5>Here are our three newest products!</h5>
+        <% @products.three_most_recent.each do |product| %>
+          <ul>
+            <li><%= link_to product.name, product_path(product), class:"hyperlinks"%></li>
+          </ul>
+        <% end %>
+      <% else %>
+        <p>There are no recent products.</p>
+      <% end %>
+    </div>
+    <div class="column-md-5, product-col">
+      <% if @products.most_reviews.any? %>
+        <h5>Here are our most reviewed products!</h5>
+        <% @products.most_reviews.each do |product| %>
+          <ul>
+            <li><%= link_to product.name, product_path(product), class:"hyperlinks"%></li>
+          </ul>
+        <% end %>
+      <% else %>
+        <p>There are no recent products.</p>
+      <% end %>
+    </div>
+    <div class="column-md-5, product-col">
+      <% if @products.made_in_usa.any? %>
+        <h5>Here are products only made in the USA!</h5>
+        <% @products.made_in_usa.each do |product| %>
+          <ul>
+            <li><%= link_to product.name, product_path(product), class:"hyperlinks"%></li>
+          </ul>
+        <% end %>
+      <% else %>
+        <p>There are no USA products.</p>
+      <% end %>
+    </div>
+  </div>
+</div>
