--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -3,25 +3,28 @@
 <p>Cost: $ <%= @product.cost %> dollars</p>
 <p>This product is from <%= @product.country_of_origin %></p>
 
-<% if @product.reviews.any? %>
-  <h3>User reviews:</h3>
-  <% @product.reviews.each do |review| %>
-    <ul>
-      <a href="/products/<%= @product.id %>/reviews/<%= review.id %>/edit" class="hyperlinks">
-      <li><div class="container"><%= review.author %> says: <%= review.content_body %> They give this product a rating of <%= review.rating %></div></li>
-      </a>
-    </ul>
+<h3>User reviews:</h3>
+  <% if @product.reviews.any? %>
+  <div class="container, review-show">
+      <% @product.reviews.each do |review| %>
+      <ul>
+          <a href="/products/<%= @product.id %>/reviews/<%= review.id %>/edit" class="hyperlinks">
+          <li><div class="container"><%= review.author %> says: <%= review.content_body %> They give this product a rating of <%= review.rating %></div></li>
+          </a>
+        </ul>
+      <% end %>
+  <% else %>
+    <p>There are no reviews for this product.</p>
   <% end %>
-<% else %>
-  <p>There are no reviews for this product.</p>
-<% end %>
+</div>
+
 <div class ="container">
   <nav class ="nav-footer">
-    <p><%= link_to "Add a review", new_product_review_path(@product), class:"footer-links"%></p>
+    |<p><%= link_to "Add a review", new_product_review_path(@product), class:"footer-links"%></p>
 
-    <p><%= link_to "Edit product", edit_product_path(@product), class:"footer-links"%></p>
-    <p><%= link_to "Delete product", product_path(@product),
+    |<p><%= link_to "Edit product", edit_product_path(@product), class:"footer-links"%></p>
+    |<p><%= link_to "Delete product", product_path(@product),
                                       :data => {:confirm => "Are you certain that you want to delete this product entry?", :method => "delete"}, class:"footer-links"%></p>
-    <p><%= link_to "Return to browsing the product list", products_path, class:"footer-links"%></p>
+    |<p><%= link_to "Return to browsing the product list", products_path, class:"footer-links"%></p>|
   </nav>
 </div>
